--- a/formexportpatch.lfm
+++ b/formexportpatch.lfm
@@ -36,6 +36,7 @@ object FormExportPatch: TFormExportPatch
     Top = 538
     Width = 75
     Anchors = [akRight, akBottom]
+    Cancel = True
     Caption = 'Cancel'
     ModalResult = 2
     TabOrder = 2
