New fields to add text name/description (#8)
The field gets filled automatically with the 'description' property of a
imported module and can be edited after that.

--- a/formprincipal.lfm
+++ b/formprincipal.lfm
@@ -333,6 +333,7 @@ object frmPrincipal: TfrmPrincipal
           'Reference2'
         )
         Align = alClient
+        ParentShowHint = False
         TabOrder = 0
       end
     end
