--- a/ONTMemo/main.lfm
+++ b/ONTMemo/main.lfm
@@ -3,18 +3,59 @@ object Form1: TForm1
   Height = 463
   Top = 141
   Width = 683
-  Caption = 'Form1'
+  Caption = 'ONTMemo Demo'
   ClientHeight = 463
   ClientWidth = 683
   OnCreate = FormCreate
-  LCLVersion = '2.0.4.0'
-  object Panel1: TPanel
+  LCLVersion = '2.0.6.0'
+  object PageControl1: TPageControl
     Left = 0
     Height = 463
     Top = 0
     Width = 683
+    ActivePage = TabSheetPreview
     Align = alClient
-    Caption = 'Panel1'
+    TabIndex = 1
     TabOrder = 0
+    OnChange = PageControl1Change
+    object TabSheetONT: TTabSheet
+      Caption = 'ONT'
+      ClientHeight = 435
+      ClientWidth = 675
+      object Memo1: TMemo
+        Left = 0
+        Height = 435
+        Top = 0
+        Width = 675
+        Align = alClient
+        Font.Name = 'Courier New'
+        Lines.Strings = (
+          'Memo1'
+        )
+        ParentFont = False
+        ScrollBars = ssAutoVertical
+        TabOrder = 0
+      end
+    end
+    object TabSheetPreview: TTabSheet
+      Caption = 'Preview'
+      ClientHeight = 435
+      ClientWidth = 675
+      object Panel1: TPanel
+        Left = 0
+        Height = 435
+        Top = 0
+        Width = 675
+        Align = alClient
+        Font.CharSet = ANSI_CHARSET
+        Font.Color = clBlack
+        Font.Height = -19
+        Font.Name = 'Times New Roman'
+        Font.Pitch = fpVariable
+        Font.Quality = fqDraft
+        ParentFont = False
+        TabOrder = 0
+      end
+    end
   end
 end
