--- a/formexportar.lfm
+++ b/formexportar.lfm
@@ -1,30 +1,33 @@
 object frmExportarProjeto: TfrmExportarProjeto
-  Left = 504
-  Height = 427
-  Top = 263
-  Width = 788
+  Left = 505
+  Height = 490
+  Top = 264
+  Width = 787
   Caption = 'Export association'
-  ClientHeight = 427
-  ClientWidth = 788
+  ClientHeight = 490
+  ClientWidth = 787
+  OnClose = FormClose
   Position = poMainFormCenter
-  LCLVersion = '2.0.6.0'
+  LCLVersion = '2.0.10.0'
   object PageControl1: TPageControl
     Left = 8
-    Height = 360
+    Height = 420
     Top = 16
-    Width = 776
+    Width = 775
     ActivePage = TabSheet1
+    Anchors = [akTop, akLeft, akRight, akBottom]
     TabIndex = 0
     TabOrder = 0
     object TabSheet1: TTabSheet
       Caption = 'Tagged destination text'
-      ClientHeight = 332
-      ClientWidth = 768
+      ClientHeight = 392
+      ClientWidth = 767
       object MemoRodapeDestino: TMemo
         Left = 13
-        Height = 212
+        Height = 272
         Top = 109
         Width = 742
+        Anchors = [akTop, akLeft, akRight, akBottom]
         Font.CharSet = ANSI_CHARSET
         Font.Color = clBlack
         Font.Height = -13
@@ -50,7 +53,7 @@ object frmExportarProjeto: TfrmExportarProjeto
         Left = 13
         Height = 19
         Top = 9
-        Width = 286
+        Width = 287
         Caption = 'Export unassociated words as added words (italics)'
         TabOrder = 1
       end
@@ -58,7 +61,7 @@ object frmExportarProjeto: TfrmExportarProjeto
         Left = 13
         Height = 19
         Top = 33
-        Width = 147
+        Width = 148
         Caption = 'Export morphology tags'
         TabOrder = 2
       end
@@ -66,7 +69,7 @@ object frmExportarProjeto: TfrmExportarProjeto
         Left = 13
         Height = 19
         Top = 57
-        Width = 212
+        Width = 213
         Caption = 'Export comments as translator notes'
         TabOrder = 3
       end
@@ -89,13 +92,14 @@ object frmExportarProjeto: TfrmExportarProjeto
     end
     object TabSheet2: TTabSheet
       Caption = 'Interlinear source text'
-      ClientHeight = 332
-      ClientWidth = 768
+      ClientHeight = 392
+      ClientWidth = 767
       object MemoRodapeOrigem: TMemo
         Left = 13
-        Height = 212
-        Top = 109
-        Width = 742
+        Height = 237
+        Top = 142
+        Width = 741
+        Anchors = [akTop, akLeft, akRight, akBottom]
         Font.CharSet = ANSI_CHARSET
         Font.Height = -13
         Font.Name = 'Courier New'
@@ -109,9 +113,9 @@ object frmExportarProjeto: TfrmExportarProjeto
         TabOrder = 0
       end
       object Label2: TLabel
-        Left = 14
+        Left = 13
         Height = 15
-        Top = 89
+        Top = 125
         Width = 97
         Caption = 'Module properties'
         ParentColor = False
@@ -119,8 +123,8 @@ object frmExportarProjeto: TfrmExportarProjeto
     end
     object TabSheet3: TTabSheet
       Caption = 'Strong''s concordance'
-      ClientHeight = 332
-      ClientWidth = 768
+      ClientHeight = 392
+      ClientWidth = 767
       object cbConcordanciaDetalhada: TCheckBox
         Left = 13
         Height = 19
@@ -145,10 +149,11 @@ object frmExportarProjeto: TfrmExportarProjeto
     end
   end
   object btExportar: TButton
-    Left = 696
+    Left = 703
     Height = 25
-    Top = 392
+    Top = 452
     Width = 75
+    Anchors = [akRight, akBottom]
     Caption = 'Export'
     Default = True
     ModalResult = 1
@@ -156,20 +161,22 @@ object frmExportarProjeto: TfrmExportarProjeto
     TabOrder = 1
   end
   object Button2: TButton
-    Left = 608
+    Left = 615
     Height = 25
-    Top = 392
+    Top = 452
     Width = 75
+    Anchors = [akRight, akBottom]
     Cancel = True
     Caption = 'Cancel'
     ModalResult = 2
     TabOrder = 2
   end
   object ProgressBar1: TProgressBar
-    Left = 8
-    Height = 20
-    Top = 392
-    Width = 568
+    Left = 16
+    Height = 25
+    Top = 452
+    Width = 567
+    Anchors = [akLeft, akRight, akBottom]
     Smooth = True
     TabOrder = 3
     Visible = False
@@ -178,14 +185,14 @@ object frmExportarProjeto: TfrmExportarProjeto
     Title = 'Salvar módulo como...'
     DefaultExt = '.nt'
     Filter = 'Módulo do theWord (*.nt)|*.nt'
-    left = 692
-    top = 220
+    Left = 692
+    Top = 220
   end
   object SaveDialogConcordancia: TSaveDialog
     Title = 'Salvar módulo como...'
     DefaultExt = '.dct.twm'
     Filter = 'Módulo do theWord (*.twm)|*.twm'
-    left = 560
-    top = 224
+    Left = 560
+    Top = 224
   end
 end
