--- a/formnovoprojeto.lfm
+++ b/formnovoprojeto.lfm
@@ -8,7 +8,7 @@ object FormNovoProjeto: TFormNovoProjeto
   ClientWidth = 464
   OnCreate = FormCreate
   Position = poMainFormCenter
-  LCLVersion = '2.0.6.0'
+  LCLVersion = '2.0.10.0'
   object GroupBox1: TGroupBox
     Left = 6
     Height = 231
@@ -171,14 +171,13 @@ object FormNovoProjeto: TFormNovoProjeto
       'New Testament'
       'Whole Bible'
     )
-    OnClick = RadioGroupScopeClick
     TabOrder = 4
   end
   object OpenDialog1: TOpenDialog
     Title = 'Choose a theWord bible module'
     Filter = 'theWord bible modules (*.ont, *.nt, *.ot)|*.ont;*.nt;*.ot'
     InitialDir = 'C:\Utilities\The Word\Bibles'
-    left = 192
-    top = 156
+    Left = 192
+    Top = 156
   end
 end
