--- a/formverserules.lfm
+++ b/formverserules.lfm
@@ -1,77 +1,80 @@
 object FrmEscolherVerseRules: TFrmEscolherVerseRules
   Left = 383
-  Height = 450
+  Height = 237
   Top = 214
-  Width = 1171
-  HorzScrollBar.Page = 1160
-  VertScrollBar.Page = 398
+  Width = 989
+  HorzScrollBar.Page = 83
+  VertScrollBar.Page = 184
   AutoScroll = True
   Caption = 'Choose verse rules'
-  ClientHeight = 450
-  ClientWidth = 1171
-  OnCreate = FormCreate
-  OnDestroy = FormDestroy
+  ClientHeight = 237
+  ClientWidth = 989
+  OnShow = FormShow
   Position = poOwnerFormCenter
   LCLVersion = '2.0.10.0'
-  object ckgVerseRules: TCheckGroup
-    Left = 0
-    Height = 450
-    Top = 0
-    Width = 1171
-    Align = alClient
-    AutoFill = True
-    Caption = 'Choose verse rules you''d like to apply'
-    ChildSizing.LeftRightSpacing = 6
-    ChildSizing.TopBottomSpacing = 6
-    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
-    ChildSizing.EnlargeVertical = crsHomogenousChildResize
-    ChildSizing.ShrinkHorizontal = crsScaleChilds
-    ChildSizing.ShrinkVertical = crsHomogenousSpaceResize
-    ChildSizing.Layout = cclLeftToRightThenTopToBottom
-    ChildSizing.ControlsPerLine = 1
-    TabOrder = 0
-  end
   object Button1: TButton
-    Left = 8
+    Left = 782
     Height = 25
-    Top = 416
+    Top = 195
     Width = 75
     Anchors = [akRight, akBottom]
     Cancel = True
     Caption = '&Cancel'
     ModalResult = 2
-    TabOrder = 1
+    TabOrder = 0
   end
   object Button2: TButton
-    Left = 129
+    Left = 903
     Height = 25
-    Top = 416
+    Top = 195
     Width = 75
     Anchors = [akRight, akBottom]
     Caption = 'OK'
     Default = True
     ModalResult = 1
+    TabOrder = 1
+  end
+  object StringGridVerseRules: TStringGrid
+    Left = 0
+    Height = 184
+    Top = 0
+    Width = 989
+    Align = alTop
+    AutoEdit = False
+    ColCount = 3
+    Columns = <    
+      item
+        ButtonStyle = cbsCheckboxColumn
+        Title.Caption = 'Apply'
+      end    
+      item
+        Title.Caption = 'From'
+      end    
+      item
+        Title.Caption = 'To'
+      end>
+    FixedCols = 0
+    Options = [goFixedVertLine, goFixedHorzLine, goVertLine, goHorzLine, goRangeSelect, goColSizing, goEditing, goSmoothScroll]
     TabOrder = 2
   end
-  object lbDe: TListBox
-    Left = 9
-    Height = 192
-    Top = 206
-    Width = 551
-    ItemHeight = 0
-    MultiSelect = True
-    OnSelectionChange = lbDeSelectionChange
+  object BtnSelectNone: TButton
+    Left = 647
+    Height = 25
+    Top = 195
+    Width = 83
+    Anchors = [akRight, akBottom]
+    Caption = 'Select none'
+    OnClick = BtnSelectNoneClick
     TabOrder = 3
-    Visible = False
   end
-  object lbPara: TListBox
-    Left = 568
-    Height = 192
-    Top = 206
-    Width = 592
-    ItemHeight = 0
-    MultiSelect = True
+  object BtnSelectAll: TButton
+    Left = 522
+    Height = 25
+    Top = 195
+    Width = 83
+    Anchors = [akRight, akBottom]
+    Caption = 'Select all'
+    OnClick = BtnSelectAllClick
     TabOrder = 4
-    Visible = False
   end
 end
