--- a/formapplypatch.lfm
+++ b/formapplypatch.lfm
@@ -13,7 +13,7 @@ object FrmApplyPatch: TFrmApplyPatch
   LCLVersion = '2.0.10.0'
   object GroupBox1: TGroupBox
     Left = 0
-    Height = 615
+    Height = 528
     Top = 0
     Width = 224
     Align = alCustom
@@ -121,5 +121,70 @@ object FrmApplyPatch: TFrmApplyPatch
       Align = alTop
       ResizeAnchor = akTop
     end
+  end
+  object LabelSrcText: TLabel
+    Left = 8
+    Height = 15
+    Top = 536
+    Width = 216
+    AutoSize = False
+    Caption = 'Source text'
+    Color = clGreen
+    Font.Color = clWhite
+    ParentColor = False
+    ParentFont = False
+    Transparent = False
+  end
+  object LabelDstText: TLabel
+    Left = 8
+    Height = 15
+    Top = 552
+    Width = 216
+    AutoSize = False
+    Caption = 'Destination text'
+    Color = clGreen
+    Font.Color = clWhite
+    ParentColor = False
+    ParentFont = False
+    Transparent = False
+  end
+  object LabelAssociations: TLabel
+    Left = 8
+    Height = 15
+    Top = 568
+    Width = 216
+    AutoSize = False
+    Caption = 'Associations'
+    Color = clGreen
+    Font.Color = clWhite
+    ParentColor = False
+    ParentFont = False
+    Transparent = False
+  end
+  object LabelComments: TLabel
+    Left = 8
+    Height = 15
+    Top = 584
+    Width = 216
+    AutoSize = False
+    Caption = 'Comments'
+    Color = clGreen
+    Font.Color = clWhite
+    ParentColor = False
+    ParentFont = False
+    Transparent = False
+  end
+  object LabelStatus: TLabel
+    Left = 8
+    Height = 15
+    Top = 600
+    Width = 216
+    AutoSize = False
+    Caption = 'Status'
+    Color = clGreen
+    Font.Color = clWhite
+    ParentColor = False
+    ParentFont = False
+    Transparent = False
   end
 end
